# runomaly

./: .gitignore  Dockerfile.backend  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: requirements.txt
backend/app/: __init__.py  core.py  main.py
backend/app/api/: routes.py
backend/app/comparison/: __init__.py  engine.py
backend/app/db/: session.py
backend/app/diagnosis/: __init__.py  rules.py
backend/app/models/: __init__.py  entities.py
backend/app/profiling/: dataset.py
backend/app/replay/: __init__.py  service.py
backend/app/schemas/: api.py
backend/app/services/: bootstrap.py  impact.py  pipeline_runner.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py
backend/tests/: conftest.py  test_api_e2e.py  test_engine_rules.py  test_postgres_persistence.py  test_profiling.py
docs/: architecture.md  database.md  demo.md  design-notes.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  styles.css
frontend/src/api/: client.ts
investigator/: __init__.py  __main__.py
investigator/cli/: main.py
investigator/monitoring/: __init__.py
sample_data/failures/: duplicate_order_ids.csv  email_null_increase.csv  empty_orders.csv  missing_customer_id.csv  price_type_change.csv  row_count_decrease.csv
sample_data/valid/: orders.csv
