[project]
name = "pipeline-failure-investigator"
version = "0.1.0"
description = "A developer tool for investigating why a data pipeline failed today when it worked previously."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "fastapi>=0.112.0",
  "pandas>=2.2.2",
  "prefect>=3.0.0",
  "psycopg[binary]>=3.2.1",
  "pydantic>=2.8.2",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.32",
  "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
  "black>=24.8.0",
  "httpx>=0.27.0",
  "mypy>=1.11.1",
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.7",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*", "investigator*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "E501", "UP042"]

[tool.mypy]
python_version = "3.12"
plugins = []
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
markers = [
  "integration: tests that require an external service such as PostgreSQL",
]
